--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,4 +2,27 @@
 
 ## v0.0.1
 
+- tools 支持根据 workspace 区分工作栏展示样式
+- tools 支持根据不同场景选择创建 模板/目录/文件
+- tools 其他功能
+
 ## v0.0.2
+
+- code style
+
+## v0.0.3
+
+- code style
+
+## v0.0.4
+
+- code style
+
+## v0.0.5
+
+- code style
+
+## v0.0.6
+
+- 优化 tools 工作栏展示样式
+- 新增 sequelize entity 支持
