--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,34 +6,10 @@
 - ✅ tools 支持根据不同场景选择创建 模板/目录/文件
 - ✅ tools 其他功能
 
-## v0.0.2
-
-- code style
-
-## v0.0.3
-
-- code style
-
-## v0.0.4
-
-- code style
-
-## v0.0.5
-
-- code style
-
 ## v0.0.6
 
 - ✅ 优化 tools 工作栏展示样式
 - ✅ 新增 sequelize entity 支持
-
-## v0.0.7
-
-- code style
-
-## v0.0.8
-
-- code style
 
 ## v0.0.9
 
@@ -45,3 +21,7 @@
 ## v0.0.10
 
 - ✅ 增加 common/base.ts
+
+## v0.1.0
+
+- ✅ 完善所有基础功能
