--- a/CHANGELOG
+++ b/CHANGELOG
@@ -34,3 +34,8 @@
 
 - ✅ 增加对于 modules 层 - provider 的支持
 - ❌ 修复 controller/service 层创建问题
+
+## v0.1.6
+
+- ✅ 增加对于 modules 层 - dao/manager/provider 的支持
+- ✅ 优化展示和基础功能
